# rug

./: Cargo.toml  LICENSE
src/: database.rs  list.rs  main.rs
src/entities/: albums.rs  artists.rs  listening_events.rs  mod.rs  prelude.rs
src/migrator/: m20241204_000001_create_artists_table.rs  m20241204_000002_create_albums_table.rs  m20241204_000003_create_listening_events_table.rs  mod.rs
